--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -69,6 +69,9 @@ option(onnxruntime_USE_PREINSTALLED_EIGEN "Use pre-installed EIGEN. Need to prov
 option(onnxruntime_BUILD_BENCHMARKS "Build ONNXRuntime micro-benchmarks" OFF)
 option(onnxruntime_USE_TVM "Build tvm for code-gen" OFF)
 option(onnxruntime_BUILD_FOR_NATIVE_MACHINE "Enable this option for turning on optimization specific to this machine" OFF)
+option(onnxruntime_USE_AVX "Use AVX instructions" OFF)
+option(onnxruntime_USE_AVX2 "Use AVX2 instructions" OFF)
+option(onnxruntime_USE_AVX512 "Use AVX512 instructions" OFF)
 option(onnxruntime_USE_LLVM "Build tvm with LLVM" OFF)
 option(onnxruntime_USE_OPENMP "Build with OpenMP support" OFF)
 option(onnxruntime_BUILD_SHARED_LIB "Build a shared library" OFF)
@@ -211,6 +214,15 @@ if (MSVC)
   endif()
   #Always enable exception handling, even for Windows ARM
   SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
+  if  (onnxruntime_USE_AVX)
+    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /arch:AVX")
+  elseif  (onnxruntime_USE_AVX2)
+    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /arch:AVX2")
+  elseif  (onnxruntime_USE_AVX512)
+    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /arch:AVX512")
+  endif()
+  SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Ob2 /Oi /d2ReducedOptimizeHugeFunctions")
+  SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /Ob2 /Oi /d2ReducedOptimizeHugeFunctions")
   if (onnxruntime_ENABLE_LTO AND NOT onnxruntime_USE_CUDA)
     SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Gw /GL")
     SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /Gw /GL")
@@ -230,7 +242,15 @@ else()
     string(APPEND CMAKE_C_FLAGS_RELEASE " -march=native -mtune=native")
     string(APPEND CMAKE_CXX_FLAGS_RELWITHDEBINFO " -march=native -mtune=native")
     string(APPEND CMAKE_C_FLAGS_RELWITHDEBINFO " -march=native -mtune=native")
-  endif()
+  elseif  (onnxruntime_USE_AVX)
+    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx")
+  elseif  (onnxruntime_USE_AVX2)
+    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2")
+  elseif  (onnxruntime_USE_AVX512)
+    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512f  -mavx512pf  -mavx512er  -mavx512cd  -mavx512vl"
+            " -mavx512bw  -mavx512dq  -mavx512ifma  -mavx512vbmi -mavx512vbmi2 -mavx512vpopcntdq -mavx5124fmaps"
+            " -mavx512vnni -mavx5124vnniw")
+  endif()  
 endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
